[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

authors = ["Alex <alexyuan150298224@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"                 #
rust-crypto = "^0.2"            # hashing
bincode = "1.3"                 # serialize and de-serialize data
failure = "0.1"                 # error handling
sled = "0.34"                   # database log
log = "0.4"                     # better loggin
env_logger = "0.10.0"           # better loggin
clap = "4.0.29"                 # cli tools
bitcoincash-addr = "0.5.2"      # create wallet address
rand = "0.8.5"                  # 
merkle-cbt = "0.3.2"            # 
serde = {version = "1.0", features = ["derive"] }   #
serde_json = "1.0"              #